# learn-c

./: .gitignore  readme.md
21st-century-c/: readme.md
21st-century-c/chapter-01/: Makefile  erf.c  readme.md
21st-century-c/chapter-02/: readme.md
21st-century-c/chapter-03/: readme.md
21st-century-c/chapter-04/: readme.md
21st-century-c/chapter-05/: readme.md
21st-century-c/chapter-06/: CMakeLists.txt  chapter_06.cbp  fib.c  readme.md
21st-century-c/chapter-07/: readme.md
21st-century-c/chapter-08/: CMakeLists.txt  main.c  readme.md
21st-century-c/chapter-09/: CMakeLists.txt  readme.md
21st-century-c/chapter-09/2string/: 2string.c
21st-century-c/chapter-09/sad/: sadstring.c
21st-century-c/chapter-10/: CMakeLists.txt  readme.md
21st-century-c/chapter-10/boxes/: main.c
21st-century-c/chapter-10/playground/: main.c
21st-century-c/chapter-10/sum/: sum.c
21st-century-c/chapter-10/sum_var/: main.c
21st-century-c/chapter-11/: readme.md
21st-century-c/chapter-12/: readme.md
cmake-docs/tut/: readme.md
cmake-docs/tut/step01/: CMakeLists.txt  tut.cxx  tut_config.h.in
cmake-docs/tut/step02/: CMakeLists.txt  tut_config.h.in
cmake-docs/tut/step02/math_funcs/: CMakeLists.txt  my_sqrt.cxx
cmake-docs/tut/step03/: CMakeLists.txt  tut.cxx
cmake-docs/tut/step03/math_funcs/: CMakeLists.txt
cmake-docs/tut/step04/: CMakeLists.txt
cmake-docs/tut/step04/math_funcs/: CMakeLists.txt
cmake-docs/tut/step05/: tut_config.h.in
cmake-docs/tut/step05/math_funcs/: CMakeLists.txt  math_funcs.h  my_sqrt.cxx
cmake-docs/tut/step06/: CMakeLists.txt  tut.cxx
cmake-docs/tut/step06/math_funcs/: my_sqrt.cxx
cmake-docs/tut/step07/: CMakeLists.txt
cmake-docs/tut/step07/math_funcs/: CMakeLists.txt  make_table.cxx
cmake-docs/tut/step08/: CMakeLists.txt  CTestConfig.cmake
modern-cmake/: readme.md
